--- a/Notify.WEB/packages.config
+++ b/Notify.WEB/packages.config
@@ -7,4 +7,7 @@
   <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebPages.zh-Hans" version="3.2.3" targetFramework="net45" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
+  <package id="System.Net.Http" version="4.3.1" targetFramework="net45" />
+  <package id="System.Net.Http.Formatting.Extension" version="5.2.3.0" targetFramework="net45" />
+  <package id="System.Web.Http.Common" version="4.0.20126.16343" targetFramework="net45" />
 </packages>
