--- a/Notify.WEB/Web.config
+++ b/Notify.WEB/Web.config
@@ -20,7 +20,7 @@
   <!--数据库链接-->
   <connectionStrings>
     <add name="SqlDB" connectionString="Data Source = 720-JSB-PC20\MSSQLSERVER2014;Network Library = DBMSSOCN;Initial Catalog = DB;User ID = sa;Password = sqlpass;" providerName="System.Data.SqlClient" />
-    <add name="MySqlDB" connectionString="server=localhost;user id=root;password=123456;persistsecurityinfo=True;database=DB;charset=utf8; AllowUserVariables=True" providerName="MySql.Data.MySqlClient" />
+    <add name="MySqlDB" connectionString="server=192.168.10.9;user id=root;password=admin;persistsecurityinfo=True;database=DB;charset=utf8; AllowUserVariables=True" providerName="MySql.Data.MySqlClient" />
   </connectionStrings>
 
   <appSettings>
