--- a/Notify.Code/Notify.Code.csproj
+++ b/Notify.Code/Notify.Code.csproj
@@ -80,6 +80,7 @@
     <Compile Include="Cache\Demonstration\City.cs" />
     <Compile Include="Cache\Demonstration\CityCollection.cs" />
     <Compile Include="Cache\Demonstration\Test.cs" />
+    <Compile Include="Code\ImageHelper.cs" />
     <Compile Include="Encrypt\AES.cs" />
     <Compile Include="Encrypt\BigInteger.cs" />
     <Compile Include="Encrypt\RSACustom.cs" />
